--- a/neofetch/config.conf
+++ b/neofetch/config.conf
@@ -5,26 +5,26 @@ print_info() {
     info underline
 
     info "OS" distro
-    # info "Host" model
+    info "Host" model
     info "Kernel" kernel
     info "Uptime" uptime
-    # info "Packages" packages
-    # info "Shell" shell
-    # info "Resolution" resolution
-    # info "DE" de
+    info "Packages" packages
+    info "Shell" shell
+    info "Resolution" resolution
+    info "DE" de
     info "WM" wm
-    # info "WM Theme" wm_theme
-    # info "Theme" theme
-    # info "Icons" icons
-    # info "Terminal" term
-    # info "Terminal Font" term_font
+    info "WM Theme" wm_theme
+    info "Theme" theme
+    info "Icons" icons
+    info "Terminal" term
+    info "Terminal Font" term_font
     info "CPU" cpu
-    # info "GPU" gpu
+    info "GPU" gpu
     info "Memory" memory
 
     # info "GPU Driver" gpu_driver  # Linux/macOS only
     # info "CPU Usage" cpu_usage
-    info "Disk" disk
+    # info "Disk" disk
     # info "Battery" battery
     # info "Font" font
     # info "Song" song
@@ -34,7 +34,7 @@ print_info() {
     # info "Users" users
     # info "Locale" locale  # This only works on glibc systems.
 
-    # info cols
+   # info cols
 }
 
 # Title
@@ -85,7 +85,7 @@ distro_shorthand="off"
 # Example:
 # on:  'Arch Linux x86_64'
 # off: 'Arch Linux'
-os_arch="off"
+os_arch="on"
 
 
 # Uptime
@@ -170,7 +170,7 @@ shell_path="off"
 # Example:
 # on:  'bash 4.4.5'
 # off: 'bash'
-shell_version="off"
+shell_version="on"
 
 
 # CPU
@@ -249,7 +249,7 @@ cpu_cores="logical"
 # C:   'Intel i7-6500U (4) @ 3.1GHz [27.2°C]'
 # F:   'Intel i7-6500U (4) @ 3.1GHz [82.0°F]'
 # off: 'Intel i7-6500U (4) @ 3.1GHz'
-cpu_temp="C"
+cpu_temp="off"
 
 
 # GPU
@@ -760,7 +760,7 @@ image_source="auto"
 #       Slackware, SunOS, LinuxLite, OpenSUSE, Raspbian,
 #       postmarketOS, and Void have a smaller logo variant.
 #       Use '{distro name}_small' to use the small variants.
-ascii_distro="fedora_small"
+ascii_distro="auto"
 
 # Ascii Colors
 #
