updated i3 config - added greenclip
clipboard history

--- a/i3/i3blocks.conf
+++ b/i3/i3blocks.conf
@@ -71,6 +71,10 @@ command=i3-msg -q exec thunar ~/
 full_text=: :
 color=#717171
 
+[clipboardhistory]
+full_text=   clipboard history
+command=rofi -modi "clipboard:greenclip print" -show clipboard -run-command '{cmd}'
+
 # Disk usage
 #
 # The directory defaults to $HOME if the instance is not specified.
