--- a/i3/config
+++ b/i3/config
@@ -415,7 +415,7 @@ exec --no-startup-id xset s 480 dpms 600 600 600
 
 # xscreensaver
 # https://www.jwz.org/xscreensaver
-#exec --no-startup-id xscreensaver --no-splash
+exec --no-startup-id xscreensaver --no-splash
 
 # Desktop notifications
 # dunst config used ~/.config/dunst/dunstrc
