updated bashrc and fastfetch

--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -30,14 +30,14 @@
         "gpu",
         "disk",
         "memory",
-        "swap",
-        "display",
+     // "swap",
+     // "display",
         "brightness",
         "battery",
-        "poweradapter",
-        "bluetooth",
-        "sound",
-        "gamepad",
+     // "poweradapter",
+     // "bluetooth",
+     // "sound",
+     // "gamepad",
         {
             "type": "custom", // SoftwareStart
             "format": "├{$1} {#1}Software Information{#} {$1}┤"
@@ -50,19 +50,19 @@
         },
         "os",
         "kernel",
-        "lm",
+      //"lm",
         "de",
         "wm",
-        "shell",
+     // "shell",
         "terminal",
-        "terminalfont",
-        "theme",
-        "icons",
-        "wallpaper",
+     // "terminalfont",
+     // "theme",
+     // "icons",
+     // "wallpaper",
         "packages",
         "uptime",
-        "media",
-        "locale",
+     // "media",
+     // "locale",
         {
             "type": "custom", // InformationEnd
             "format": "└{$1}──────────────────────{$1}┘"
